--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -9,7 +9,7 @@ env:
   LOCATION: westeurope
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: 4ebda57e-7411-4099-a775-8b82ef11b64a
-  WEBAPP-NAME: eshoponweb-webapp-NAME
+  WEBAPP-NAME: Myunikate343
 
 
 jobs:
